# chimera-os

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ide-chat-history.json  pyproject.toml  submission_report.md
.cursor/rules/: agent.md
.github/workflows/: main.yml
challeng docs /: Project_Chimera_3Day_Challenge.md
nots/: agnet-arc.md  answer.md  architecture_strategy.md  final_summery agent -1.md  final_summery.md  project_framework.md  project_integration_guide.md  reading_summary.md
research/: answer1.md  architecture_strategy.md   mcp_connection_log.md  moltbook_analysis.md  not.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md
skills/content_generator/: README.md  input_schema.json  output_schema.json
skills/engagement_manager/: README.md  input_schema.json  output_schema.json
skills/trend_fetcher/: README.md  input_schema.json  output_schema.json
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
